# pir-service

./: .gitignore
docker/dev/: Dockerfile  applobase_dockerfile  build_image_dev.sh  docker-compose.yml  nginx.conf  run_image_dev.sh  source_dockerfile
docker/pir-deploy/: Dockerfile  build_base_image.sh  build_work_image.sh  docker-compose.yml  workDockerfile
docker/pir-deploy/mpc-service/: check_http_health.sh  copy.sh  docker-entrypoint.sh  nginx.conf  requirements.txt  s3-proxy.py
shell/: app.py  build_image_dev.sh  check_http_health.sh  final.csv  pack_image.sh  pipline-test.py  pipline.py  test-mscp-1y.sh  test-mscp-third.sh  test-mscp.sh  tmp_result.csv
shell/mpc-pir-third-party/: README  data.csv  docker-compose.yml  pipline-test.py
src/python/: load-s3data.py
src/python/data/: data_set_1805491423655497730_test_V1.csv
src/service/: .bazelrc  BUILD.bazel  README  WORKSPACE  bazel-bin  bazel-out  bazel-service  bazel-testlogs  copy.sh  pir-test.sh  run.sh
src/service/bazel/: BUILD.bazel  apsi.BUILD  repositories.bzl  service.bzl
src/service/data/: BUILD.bazel  mpc_config.json
src/service/src/: BUILD.bazel
src/service/src/config/: BUILD.bazel  config.cc  config.h  config_test.cc
src/service/src/kernel/: BUILD.bazel
src/service/src/kernel/data_db/: BUILD.bazel  batch_writer.cc  batch_writer.h  batch_writer_test.cc  data_cacher.cc  data_cacher.h  data_cacher_test.cc  db_client.cc  db_client.h  db_meta.cc  db_meta.h  db_meta_info.cc  db_meta_info.h  db_meta_info_test.cc  db_meta_test.cc  db_server.cc  db_server.h  db_server_client_test.cc  mega_batch.cc  mega_batch.h  sender_cacher.cc  sender_cacher.h  sender_db.h  time_profiler.cc  time_profiler.h  time_profiler.proto  time_protype.h
src/service/src/mpc/: BUILD.bazel  api.cc  api.h  io_wrapper.cc  io_wrapper.h  operator_executor.cc  operator_executor.h
src/service/src/pir/: BUILD.bazel  pir_fse_prama.h  pir_manager.cc  pir_manager.h  pir_manager_fse.cc  pir_service.proto  pir_utils.h
src/service/src/pir/pir_client/: BUILD.bazel  mlflow_client.cc  pir_client.cc  pir_client.h  pir_client_base_fse.cc  pir_client_factory.h  pir_client_factory_fse.cc  pir_client_factory_fse.h  pir_client_se.cc  pir_client_se.h  pir_client_se_net.cc  pir_client_se_net.h  pir_client_spu.h
src/service/src/pir/pir_data_handler/: BUILD.bazel  pir_data_handler.cc  pir_data_handler.h  pir_data_handler_factory.h  pir_data_handler_factory_fse.cc  pir_data_handler_factory_fse.h  pir_data_handler_se.cc  pir_data_handler_se.h  pir_data_handler_spu.cc  pir_data_handler_spu.h
src/service/src/pir/pir_server/: BUILD.bazel  pir_server.cc  pir_server.h  pir_server_base_fse.cc  pir_server_factory.h  pir_server_factory_fse.cc  pir_server_factory_fse.h  pir_server_se.cc  pir_server_se.h  pir_server_se_net.cc  pir_server_se_net.h  pir_server_spu.h
src/service/src/rpc/: BUILD.bazel  channel_brpc_gateway.cc  channel_brpc_gateway.h  channel_brpc_gateway_test.cc  factory_brpc_gateway.cc  factory_brpc_gateway.h  gateway_proxy_mock.cc  gateway_proxy_mock.h  gateway_proxy_test.cc  mscp.code-workspace  receiver_brpc_gateway.cc  receiver_brpc_gateway.h  service_call.cc  service_call.h
src/service/src/rpc/proto/: BUILD.bazel  basic-meta.proto  gateway-meta.proto  gateway-service.proto  service.proto
src/service/src/rpc/rpc_transport/: BUILD.bazel  rpc_key_adpapter.cc  rpc_key_adpapter.h  rpc_key_adpapter_test.cc  rpc_receiver.cc  rpc_receiver.h  rpc_receiver_test.cc  rpc_sender.cc  rpc_sender.h  rpc_sender_test.cc  rpc_server.cc  rpc_server.h  rpc_server_test.cc  rpc_session.cc  rpc_session.h
src/service/src/search/: BUILD.bazel  searcher.cc  searcher.h
src/service/src/util/: BUILD.bazel  json.cc  json.h  json_test.cc  mlflow_api.cc  mlflow_api.h  mock_spu_context.cc  mock_spu_context.h  mock_spu_utils.cc  mock_spu_utils.h  time_statistics.cc  time_statistics.h
src/service/ta/: BUILD.bazel  pir_data_generator.cc  pir_data_generator.h  pir_multi_query.cc  pir_result_collector.h
