# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
package(default_visibility = ["//visibility:public"])

load("//bazel:service.bzl", "service_cc_binary")
load("//bazel:service.bzl", "service_cc_library")
load("//bazel:service.bzl", "service_cc_test")

#bazel build //src/config:config
service_cc_library(
    name = "config",
    srcs = ["config.cc"],
    hdrs = glob(["**/*.h"]),
    deps = [
        "//src/util:json",
    ],
)


#bazel test //src/config:config_test
service_cc_test(
    name = "config_test",
    srcs = ["config_test.cc"],
    deps = [
        ":config",
    ],
)