# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])

load("//bazel:service.bzl", "service_cc_binary")
load("//bazel:service.bzl", "service_cc_library")

service_cc_library(
    name = "io_wrapper",
    srcs = ["io_wrapper.cc"],
    hdrs = ["io_wrapper.h"],
    deps = [
        "@spulib//libspu/kernel:context",
        "@spulib//libspu/device:io",
    ],
)

service_cc_library(
    name = "operator_executor",
    srcs = ["operator_executor.cc"],
    hdrs = ["operator_executor.h"],
    deps = [
        ":io_wrapper",
        "@spulib//libspu/kernel:context",
        "@spulib//libspu/kernel/hal",
        "@spulib//libspu/device:io",
        "@spulib//libspu/core:logging",
    ],
)

service_cc_library(
    name = "api",
    srcs = ["api.cc"],
    hdrs = ["api.h"],
    deps = [
        ":operator_executor",
    ],
)
