# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:public"])
load("//bazel:service.bzl", "service_cc_binary")
load("//bazel:service.bzl", "service_cc_library")
load("//bazel:service.bzl", "service_cc_test")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

#bazel build //src/pir:pir_service_proto
proto_library(
    name = "pir_service_proto",
    srcs = ["pir_service.proto"],
)

#bazel build //src/pir:pir_service_cc_proto
cc_proto_library(
    name = "pir_service_cc_proto",
    deps = [":pir_service_proto"],
)

#bazel build //src/pir:pir_utils
service_cc_library(
    name = "pir_utils",
    hdrs = ["pir_utils.h"],
    #srcs = ["pir_utils.cc"],
    deps = [],
)

#bazel build //src/pir:pir_fse_prama
service_cc_library(
    name = "pir_fse_prama",
    hdrs = ["pir_fse_prama.h"],
    #srcs = ["pir_utils.cc"],
    deps = [],
)

#bazel build //src/pir:pir
service_cc_library(
    name = "pir",
    hdrs = ["pir_manager.h"],
    srcs = ["pir_manager.cc"],
    deps = [
            ":pir_utils",
            "//src/pir/pir_data_handler:pir_data_handler",
            "//src/pir/pir_client:pir_client",
            "//src/pir/pir_server:pir_server",
    ],
)

#bazel build //src/pir:pir_fse
service_cc_library(
    name = "pir_fse",
    hdrs = ["pir_manager.h"],
    srcs = ["pir_manager_fse.cc"],
    deps = [
            ":pir_utils",
            "//src/pir/pir_data_handler:pir_data_handler_fse",
            "//src/pir/pir_client:pir_client_fse",
            "//src/pir/pir_server:pir_server_fse",
    ],
)