# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


package(default_visibility = ["//visibility:public"])

load("//bazel:service.bzl", "service_cc_binary")
load("//bazel:service.bzl", "service_cc_library")
load("//bazel:service.bzl", "service_cc_test")

#bazel build //src/util:time_statistics
service_cc_library(
    name = "time_statistics",
    srcs = ["time_statistics.cc"],
    hdrs = ["time_statistics.h"],
    deps = [
        "@spulib//libspu/core:logging",
    ],
)


#bazel build //src/util:json
service_cc_library(
    name = "json",
    srcs = ["json.cc"],
    hdrs = ["json.h"],
    deps = [
        "@com_github_nlohmann_json//:json",
    ],
)

#bazel test //src/util:json_test
service_cc_test(
    name = "json_test",
    srcs = ["json_test.cc"],
    deps = [
        ":json",
    ],
)

#bazel build //src/util:mock_spu_context
service_cc_library(
    name = "mock_spu_context",
    srcs = ["mock_spu_context.cc"],
    hdrs = ["mock_spu_context.h"],
    deps = [
        "@spulib//libspu/core",
        "@spulib//libspu/core:trace",
        "@spulib//libspu/kernel:value",  # FIXME: each module depends on value
        "@yacl//yacl/link",
    ],
)

#bazel build //src/util:mock_spu_utils
service_cc_library(
    name = "mock_spu_utils",
    srcs = ["mock_spu_utils.cc"],
    hdrs = ["mock_spu_utils.h"],
    deps = [
        ":mock_spu_context",
        "//src/config:config",
        "//src/rpc:factory_brpc_gateway",
    ],
)

service_cc_library(
    name = "mlflow_api",
    srcs = ["mlflow_api.cc"],
    hdrs = ["mlflow_api.h"],
    includes = ["."],
    visibility = ["//visibility:public"],
    # deps = [":httplib"],
)