# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

#bazel build //src/rpc/proto:basicmeta_proto
proto_library(
    name = "basicmeta_proto",
    srcs = ["basic-meta.proto"],
)

#bazel build //src/rpc/proto:basicmeta_cc_proto
cc_proto_library(
    name = "basicmeta_cc_proto",
    deps = [":basicmeta_proto"],
)

#bazel build //src/rpc/proto:gatewaymeta_proto
proto_library(
    name = "gatewaymeta_proto",
    srcs = ["gateway-meta.proto"],
    deps = [":basicmeta_proto"],
)

#bazel build //src/rpc/proto:gatewaymeta_cc_proto
cc_proto_library(
    name = "gatewaymeta_cc_proto",
    deps = [":gatewaymeta_proto"],
)

#bazel build //src/rpc/proto:gatewayservice_proto
proto_library(
    name = "gatewayservice_proto",
    srcs = ["gateway-service.proto"],
    deps = [":basicmeta_proto",
            ":gatewaymeta_proto",],
)

#bazel build //src/rpc/proto:gatewayservice_cc_proto
cc_proto_library(
    name = "gatewayservice_cc_proto",
    deps = [":gatewayservice_proto"],
)